# fcp-midi

./: .mcp.json  CLAUDE.md  README.md  celebration.mid  compose_celebration.py  happy_birthday_fcp.mid  happy_birthday_fcp.py  happy_birthday_raw.mid  happy_birthday_raw.py  pyproject.toml
.claude-plugin/: plugin.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: tracker-v2-enhancements.md
docs/examples/: README.md  super_mario_bros.mid  voltage-drop-battle.md  voltage_drop.mid  voltage_drop_fcp.mid  voltage_drop_prompt.md  voltage_drop_python.mid  voltage_drop_remix.py  voltage_drop_script.py
src/fcp_midi/: adapter.py  adapter_v2.py  errors.py  main.py  main_v2.py
src/fcp_midi/lib/: cc_names.py  chord_library.py  gm_drums.py  gm_instruments.py  instrument_registry.py  soundfont.py  velocity_names.py
src/fcp_midi/model/: event_log.py  midi_model.py  registry.py  song.py  timing.py
src/fcp_midi/parser/: __init__.py  chord.py  duration.py  ops.py  pitch.py  position.py  selector.py  tokenizer.py
src/fcp_midi/serialization/: deserialize.py  serialize.py
src/fcp_midi/server/: __init__.py  formatter.py  intent.py  ops_context_v2.py  ops_editing.py  ops_editing_v2.py  ops_meta.py  (+12 more)
tests/: conftest.py  test_adapter.py  test_adapter_v2.py  test_integration.py  test_libraries.py  test_midi_model.py  test_model.py  test_ops_v2.py  test_parser.py  test_queries_v2.py  test_resolvers.py  test_serialization.py  test_server.py  test_smoke.py  test_soundfont.py  test_stress.py  test_timing.py  test_tracker_format.py  test_tracker_import.py
